<resources>
    <string name="app_name" translatable="false">Roomflix</string>
    <string name="title_exit">Warning</string>
    <string name="explanation_exit_codes">We are doing some operations, let us some minutes</string>
    <string name="explanation_exit">
        You are going to exit from Roomflix
    </string>
    <string name="explanation_exit1">
        Your personal information will be deleted when you go out from the room\nAlso your data wont be processed by us or by third part
    </string>

    <string name="option_os">SELECT YOUR OPERATIVE SYSTEM TO CONNECT WITH MIRRORING</string>

    <string name="back" >GO BACK</string>
    <string name="ok" >OK</string>
    <string name="mouse" >ENABLE/DISABLE MOUSE</string>
    <string name="top_bottom" >UP/DOWN/RIGHT/LEFT</string>
    <string name="loading_please_wait" translatable="false">Loading... please wait</string>
    <string name="parental_control">Enter the parental control code to access the content</string>
    <string name="control_parental">Parental control</string>
    <string name="codigo">Input the code here</string>
    <string name="error_tv_premium">Wrong code</string>
    <string name="network_error_title">Error de Conexión</string>
    <string name="network_error_message">No se pudo cargar la configuración. Por favor, compruebe su conexión a internet.</string>
    <string name="network_error_retry">Reintentar</string>
    <string name="network_error_settings">Configurar Red</string>
    <string name="send_content_description">Compartir contenido a la TV</string>
    <!-- Device Admin (MDM / Kiosk) -->
    <string name="device_admin_label">Roomflix Device Admin</string>
    <string name="device_admin_description">Permite configurar Roomflix como launcher principal y modo kiosk en el dispositivo.</string>
</resources>
