<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ablMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:scaleType="fitXY" />

        <TextClock
            android:id="@+id/toptextClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="27dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/montserrat_light"
            android:format12Hour="null"
            android:format24Hour="hh:mm"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ico_day"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="275dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/montserrat_light"
            android:text="{gmd_today}"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="140dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_light"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/ico_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="{gmd_access_time}"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/toptextClock"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myVideo"
            android:layout_width="502dp"
            android:layout_height="282dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="82dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusRight="@id/btn7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <VideoView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="invisible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btn0"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myVideo" />

        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn0" />

        <ImageButton
            android:id="@+id/btn2"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/btn0"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintTop_toTopOf="@+id/btn0" />


        <ImageButton
            android:id="@+id/btn3"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toTopOf="@+id/btn1"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btn4"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/btn2"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toTopOf="@+id/btn2" />

        <ImageButton
            android:id="@+id/btn5"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toTopOf="@+id/btn3"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btn6"
            android:layout_width="70dp"
            android:layout_height="282dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btn6"
            app:layout_constraintBottom_toBottomOf="@id/btn5"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/myVideo" />

        <ImageButton
            android:id="@+id/btn7"
            android:layout_width="282dp"
            android:layout_height="282dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="82dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/myVideo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn8"
            android:layout_width="282dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintTop_toTopOf="@+id/btn6" />

        <ImageButton
            android:id="@+id/btn9"
            android:layout_width="282dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            android:nextFocusDown="@id/btn9"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btn8" />


        <ImageButton
            android:id="@+id/btn10"
            android:layout_width="282dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toTopOf="@+id/btn7" />

        <ImageButton
            android:id="@+id/btn11"
            android:layout_width="282dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toBottomOf="@id/btn10" />

        <ImageButton
            android:id="@+id/btn12"
            android:layout_width="282dp"
            android:layout_height="282dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btn12"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toBottomOf="@+id/btn11" />

        <ImageButton
            android:id="@+id/btn13"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="82dp"
            android:layout_marginBottom="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/btn14"
            app:layout_constraintStart_toEndOf="@+id/btn10"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn14"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/btn11"
            app:layout_constraintTop_toTopOf="@+id/btn11" />

        <ImageButton
            android:id="@+id/btn15"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/btn12"
            app:layout_constraintTop_toTopOf="@+id/btn12" />

        <ImageButton
            android:id="@+id/btn16"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btn16"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/btn12"
            app:layout_constraintTop_toBottomOf="@+id/btn15" />

        <ImageView
            android:id="@+id/ok"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ok"
            app:layout_constraintStart_toStartOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <TextView
            android:id="@+id/text_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/ok"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <ImageView
            android:id="@+id/mouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/activar_mouse"
            app:layout_constraintStart_toEndOf="@+id/text_ok"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <TextView
            android:id="@+id/text_mouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/mouse"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/mouse"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/atras"
            app:layout_constraintStart_toEndOf="@+id/text_mouse"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <TextView
            android:id="@+id/text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/back"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <ImageView
            android:id="@+id/top_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arriba_abajo"
            app:layout_constraintStart_toEndOf="@+id/text_back"
            app:layout_constraintTop_toBottomOf="@+id/btn12" />

        <ImageView
            android:id="@+id/right_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/izquierda_derecha"
            app:layout_constraintStart_toEndOf="@+id/top_bottom"
            app:layout_constraintTop_toBottomOf="@+id/btn12" />

        <TextView
            android:id="@+id/text_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_bottom"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/right_left"
            app:layout_constraintTop_toBottomOf="@+id/btn9"/>

        <include
            android:id="@+id/loader"
            layout="@layout/loader"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>